# AgenticRAG-RL

./: CLAUDE.md  README.md  README.zh-CN.md  requirements.txt  垂直领域多跳AgenticRAG&RL项目.md
demo/: .env.example  .gitignore  CODE_REVIEW.md  README.md  pyproject.toml  requirements-verl.txt  requirements.txt  torch_check.py  unsloth_check.py
demo/bootstrap/: bootstrap-repos.ps1  setup-agenticrag.ps1  setup-verl.ps1  version-lock.json
demo/docs/: FQA.md  SFT训练版本改动说明.md  UnslothStudio训练.md  architecture.md  工程架构.md  数据构造价格推算.md  数据流.md  环境安装.md  疑问记录.md  索引构建.md  计算资源推算.md  训练&观测.md  训练命令.md  训练样本长度计算.md  训练测评.md  训练观测.md  训练追溯.md
demo/modal/: download_latest_checkpoint.py  download_outputs.ps1  modal_grpo_tool_agent.py  resume_after_account_switch.py  upload_assets.ps1
demo/scripts/: build_agentic_stop_sft.py  build_direct_answer_sft.py  build_index.py  build_knowledge_graph.py  build_oracle_traces.py  calc_sample_lengths.py  clean_seed_qa.py  clean_synthesis.py  compare_predictions.py  convert_sft_to_llamafactory.py  convert_sft_to_unsloth.py  copy_merged_model_to_studio.py  diagnose_sft_protocol.py  domain_multihop_synthesis.py  eval_agentic.py  eval_hf_agentic.py  eval_hf_model.py  export_unsloth_lora.py  gen_enhanced_aliases.py  gen_seed_qa.py  inspect_sft_trace.py  judge_synthesis.py  parse_pdf_corpus.py  parse_text_corpus.py  prepare_agentic_grpo_data.py  replay_swanlab_history.py  run_cloud_eval.py  run_llm_judge.py  run_pipeline.py  setup_env.py  split_sft_train_eval.py  split_train_test.py  split_unsloth_studio_data.py  trace_to_sft.py  train_grpo_unsloth.py  train_sft_unsloth.py  train_sft_unsloth_trace.py  watch_unsloth_training.py
demo/tests/: conftest.py  test_agentic.py  test_build_agentic_stop_sft.py  test_build_direct_answer_sft.py  test_compare_predictions.py  test_convert_sft_to_unsloth.py  test_env.py  test_eval_hf_agentic.py  test_eval_hf_model.py  test_evaluation.py  test_grpo_data.py  test_grpo_tool_agent.py  test_indexing.py  test_judge.py  test_llm_client.py  test_monitoring.py  (+17 more)
(+156 files in other folders)
